--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,24 +10,17 @@ spring:
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-#        filters: stat
-#        maxActive: 20
-#        initialSize: 1
-#        maxWait: 60000
-#        minIdle: 1
-#        timeBetweenEvictionRunsMillis: 60000
-#        minEvictableIdleTimeMillis: 300000
-#        validationQuery: select 'x'
-#        testWhileIdle: true
-#        testOnBorrow: false
-#        testOnReturn: false
-#        poolPreparedStatements: true
-#        maxOpenPreparedStatements: 20
+    data:
+        elasticsearch:
+               #默认为elasticsearch
+            cluster-name: my-application
+               #配置es节点信息，逗号分隔，如果没有指定，则启动ClientNode
+            cluster-nodes: 118.24.78.36:9300
 
-## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
+## 该配置节点为独立的节点，如果将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
   mapper-locations: classpath:mapping/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
-  type-aliases-package: com.baseweb.myfield.model  # 注意：对应实体类的路径
+  type-aliases-package: com.baseweb.myfield.mybatisdemo.model  # 注意：对应实体类的路径
 
 #pagehelper分页插件
 pagehelper:
